--- a/sass/layout/_gmail__section.scss
+++ b/sass/layout/_gmail__section.scss
@@ -15,6 +15,7 @@ body {
             text-align: center;
             color: #fff;
             margin-bottom: 35px;
+            margin-top: 20px;
         }
         h4 {
             font-size: 1.5rem;
@@ -93,13 +94,13 @@ body {
                 width: 82%;
                 button {
                     margin: 0;
-                    margin-top: 15px;
+                    margin-bottom: 20px;
                     width: 100%;
                 }
                 .input {
                     margin-right: 0;
                     width: 100%;
-                    margin-bottom: 5px;
+                    margin-bottom: 20px;
                     input {
                         margin: 0;
                         width: 100%;
